@@ -540,6 +540,8 @@
 	- do not quote the whole command-line on linux
 	- report proper exitcode on linux
 	- added create_thread() and wait_for_thread() to common.c/.h
+	- moved command-line parameter creation into create_commandline()
+	- added "parameters" parameter to execute_mame()
 	
 	create_report
 	- added a summary at the end when "dokuwiki_format" is set
